[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/ai_diagram/editor/graphnode/gn_func.gd" type="Script" id=1]

[node name="gn_func" type="GraphNode"]
margin_top = 0.420456
margin_right = 178.0
margin_bottom = 100.42
title = "Function"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 0, 0, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_name" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 162.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 162.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Return"

[node name="le_return" type="LineEdit" parent="HBoxContainer"]
margin_left = 46.0
margin_right = 146.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 74.0
margin_right = 162.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 3.0
margin_right = 73.0
margin_bottom = 17.0
text = "Parameters"

[node name="btn_min" type="Button" parent="HBoxContainer2"]
margin_left = 77.0
margin_right = 94.0
margin_bottom = 20.0
text = "-"

[node name="btn_plus" type="Button" parent="HBoxContainer2"]
margin_left = 98.0
margin_right = 118.0
margin_bottom = 20.0
text = "+"

[connection signal="close_request" from="." to="." method="_on_gn_func_close_request"]
[connection signal="text_changed" from="le_name" to="." method="_on_le_name_text_changed"]
[connection signal="text_changed" from="HBoxContainer/le_return" to="." method="_on_le_return_text_changed"]
[connection signal="button_up" from="HBoxContainer2/btn_min" to="." method="_on_btn_min_button_up"]
[connection signal="button_up" from="HBoxContainer2/btn_plus" to="." method="_on_btn_plus_button_up"]
